--- a/templates/json_editor.html
+++ b/templates/json_editor.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}JSON Editor - Psycho-Validator{% endblock %}
+{% block title %}JSON Editor - Prism-Validator{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
