--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Psycho-Validator - Home{% endblock %}
+{% block title %}Prism-Validator - Home{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -9,7 +9,7 @@
         <div class="text-center mb-5">
             <h1 class="display-4 mb-3">
                 <i class="fas fa-brain text-primary me-3"></i>
-                Psycho-Validator
+                Prism-Validator
             </h1>
             <p class="lead text-muted">
                 A professional tool for validating and annotating psychological datasets
