Add new survey templates for psychological assessments
- Introduced FSoZU questionnaire with 54 items and detailed response levels.
- Added PANAS questionnaire with 20 items, each with a 5-point response scale.
- Implemented PSQI questionnaire with 20 items, including time-based responses.
- Created PSS questionnaire with 10 items, featuring a 5-point frequency scale.
- Developed STAI questionnaire with 20 items, utilizing a 4-point frequency scale.

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,6 +111,9 @@
                     <a class="nav-link" href="/editor">
                         <i class="fas fa-pen-fancy me-1"></i>JSON Editor
                     </a>
+                    <a class="nav-link" href="{{ url_for('survey_generator') }}">
+                        <i class="fas fa-poll-h me-1"></i>Survey Gen
+                    </a>
                 </div>
             </div>
         </div>
