--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
 │   │   ├── image/
 │   │   ├── movie/
 │   │   └── audio/
-│   └── behavior/
+│   └── survey/
 └── sub-02/
     └── ...</code></pre>
                     </div>
@@ -246,9 +246,8 @@
                             <li><i class="fas fa-image text-primary me-2"></i><code>image/</code> - Visual stimuli (.png, .jpg, .tiff)</li>
                             <li><i class="fas fa-video text-primary me-2"></i><code>movie/</code> - Video stimuli (.mp4, .avi, .mov)</li>
                             <li><i class="fas fa-volume-up text-primary me-2"></i><code>audio/</code> - Audio stimuli (.wav, .mp3, .flac)</li>
-                            <li><i class="fas fa-brain text-primary me-2"></i><code>eeg/</code> - EEG recordings (.edf, .bdf)</li>
                             <li><i class="fas fa-eye text-primary me-2"></i><code>eyetracking/</code> - Eye tracking data</li>
-                            <li><i class="fas fa-chart-line text-primary me-2"></i><code>behavior/</code> - Behavioral responses</li>
+                            <li><i class="fas fa-chart-line text-primary me-2"></i><code>survey/</code> - Survey/Behavioral responses</li>
                         </ul>
                     </div>
                 </div>
