--- a/templates/index.html
+++ b/templates/index.html
@@ -233,21 +233,18 @@
 ├── participants.tsv (optional)
 ├── sub-01/
 │   ├── ses-001/ (optional)
-│   │   ├── image/
-│   │   ├── movie/
-│   │   └── audio/
-│   └── survey/
+│   │   ├── survey/
+│   │   └── biometrics/
+│   └── anat/
 └── sub-02/
     └── ...</code></pre>
                     </div>
                     <div class="col-md-6">
                         <h6>Supported Modalities:</h6>
                         <ul class="list-unstyled">
-                            <li><i class="fas fa-image text-primary me-2"></i><code>image/</code> - Visual stimuli (.png, .jpg, .tiff)</li>
-                            <li><i class="fas fa-video text-primary me-2"></i><code>movie/</code> - Video stimuli (.mp4, .avi, .mov)</li>
-                            <li><i class="fas fa-volume-up text-primary me-2"></i><code>audio/</code> - Audio stimuli (.wav, .mp3, .flac)</li>
-                            <li><i class="fas fa-eye text-primary me-2"></i><code>eyetracking/</code> - Eye tracking data</li>
                             <li><i class="fas fa-chart-line text-primary me-2"></i><code>survey/</code> - Survey/Behavioral responses</li>
+                            <li><i class="fas fa-heartbeat text-primary me-2"></i><code>biometrics/</code> - Biometric assessments (VO2max, planks)</li>
+                            <li><i class="fas fa-wave-square text-primary me-2"></i><code>physiological/</code> - Standard BIDS physio</li>
                         </ul>
                     </div>
                 </div>
